# project-black-monolith

./: .dockerignore  .env.example  .gitguardian.yaml  .gitignore  CONTRIBUTING.md  EVALUATION.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  run_full_demo.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/lib/: benchmark-store.ts  db.ts  event-ingest.ts  event-store.ts  incident-store.ts  ingest-auth.ts  operator-auth.ts  types.ts
dashboard/scripts/: migrate.mjs
dashboard/test/: malformed-event.test.mjs
mcp-shield/: .dockerignore  Cargo.toml  Dockerfile  README.md
mcp-shield/fixtures/: calibration_results.md  fake_ingest.js  fake_mcp_server.py  run_demo.sh  verify_outbox.sh
mcp-shield/src/: events.rs  fingerprint.rs  jsonrpc.rs  main.rs  outbox.rs  proxy.rs  sanitizer.rs
scripts/: generate_secrets.sh  reset_demo_state.sh  run_benchmarks.sh  run_local_demo.sh  verify_benchmarks.sh  verify_correlation.sh  verify_incidents.sh  verify_ingest.sh  verify_recovery.sh
supabase/: config.toml
supabase/migrations/: 20260716094020_create_security_incident_control_plane.sql  20260716140000_add_incident_triage.sql  20260717120000_add_benchmark_runs.sql
trace-audit/: .dockerignore  Dockerfile  README.md  requirements.txt
trace-audit/src/: config.py  (+7 more)
vector-anchor/: .dockerignore  Dockerfile  README.md  requirements.txt
(+51 files in other folders)
