[package]
name = "mcp-shield"
version = "0.1.0"
edition = "2021"
description = "Project Black Monolith tool-layer defense: MCP proxy that fingerprints tool schemas and detects poisoning / rug-pull mutations"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
